<resources>
    <string name="app_name">qBittorrent Controller+</string>
    <string name="app_shortname">qBController+</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add">Add</string>
    <string name="action_pause">Pause</string>
    <string name="action_resume">Resume</string>
    <string name="action_resume_all">Resume all</string>
    <string name="action_force_start">Force Resume</string>
    <string name="action_pause_all">Pause all</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete_drive">Delete data</string>
    <string name="action_increase_priority">Increase priority</string>
    <string name="action_decrease_priority">Decrease priority</string>
    <string name="action_maximum_priority">Move to top</string>
    <string name="action_minimum_priority">Move to bottom</string>
    <string name="action_download_rate_limit">Download rate limit</string>
    <string name="action_upload_rate_limit">Upload rate limit</string>
    <string name="action_force_recheck">Force recheck</string>
    <string name="action_file_dont_download">Do not download</string>
    <string name="action_file_normal_priority">Normal</string>
    <string name="action_file_high_priority">High</string>
    <string name="action_file_maximum_priority">Maximum</string>
    <string name="connection_error">Network connection failed</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dm_deleteTorrent">Pressing OK will delete the torrent</string>
    <string name="dm_deleteSelectedTorrents">Pressing OK will delete the torrents</string>
    <string name="dt_deleteTorrent">Delete torrent</string>
    <string name="dt_deleteSelectedTorrents">Delete torrents</string>
    <string name="dm_deleteDriveTorrent">Pressing OK will delete torrent and its data from the hard drive</string>
    <string name="dm_deleteDriveSelectedTorrents">Pressing OK will delete torrents and data from the hard drive</string>
    <string name="dt_deleteDriveTorrent">Delete torrent and its data</string>
    <string name="dt_deleteDriveSelectedTorrents">Delete torrents and data</string>
    <string name="torrentAdded">Torrent sent!</string>
    <string name="torrentFileAdded">Torrent name sent!</string>
    <string name="torrentStarted">Torrent started!</string>
    <string name="torrentsSelectedStarted">Torrents started!</string>
    <string name="torrentsRecheck">Recheck started</string>
    <string name="torrentstogglefisrtLastPiecePrio">Toggled first and last piece download!</string>
    <string name="torrentstoggleSequentialDownload">Toggled sequential download!</string>
    <string name="torrentPaused">Torrent paused!</string>
    <string name="torrentsSelectedPaused">Torrents paused!</string>
    <string name="AllTorrentsPaused">All torrents were paused!</string>
    <string name="AllTorrentsResumed">All torrents were resumed!</string>
    <string name="torrentDeleted">Torrent deleted!</string>
    <string name="torrentsSelectedDeleted">Torrents deleted!</string>
    <string name="torrentDeletedDrive">Torrent and data deleted!</string>
    <string name="torrentsSelectedDeletedDrive">Torrents and data deleted!</string>
    <string name="increasePrioTorrent">Priority increased!</string>
    <string name="decreasePrioTorrent">Priority decreased!</string>
    <string name="priorityUpdated">Priority updated!</string>
    <string name="getQBittorrentPrefefrences">Getting options…</string>
    <string name="setQBittorrentPrefefrences">Options saved</string>
    <string name="setUploadRateLimit">Upload rate limit set</string>
    <string name="setDownloadRateLimit">Download rate limit set</string>
    <string name="error">Error</string>
    <string name="error1">The host or IP address cannot be reached. Please check your settings!</string>
    <string name="error2">HTTPS certificate error!</string>
    <string name="error401">Unauthorized access. Check your account settings to avoid bans!</string>
    <string name="error403">Authentication error</string>
    <string name="info">Warning</string>
    <string name="global_value_error">Global value cannot be retrieved. Please check your connection settings!</string>
    <string name="settings">Settings</string>
    <string name="about_help1">To start using the client, set your qBittorrent server settings</string>
    <string name="about_help2">Press the refresh button on the menu to get new results, or choose an option from the left menu to get the torrent list from the server.</string>
    <string name="about_motto">Manage all your torrents from Android using qBittorrent Controller</string>
    <string name="icon">icon</string>
    <string name="no_results">No torrents found</string>
    <string name="tablet_help">Use the drawer menu to choose an option</string>
    <string name="torrent_details_properties">Properties</string>
    <string name="torrent_details_content">Files</string>
    <string name="torrent_details_trackers">Trackers</string>
    <string name="torrent_details_name">Name:</string>
    <string name="torrent_details_general_info">General info</string>
    <string name="torrent_details_save_path">Save path:</string>
    <string name="torrent_details_eta">ETA:</string>
    <string name="torrent_details_ratio">Ratio:</string>
    <string name="torrent_details_priority">Priority:</string>
    <string name="torrent_details_leechs">Leeches:</string>
    <string name="torrent_details_seeds">Seeds:</string>
    <string name="torrent_details_state">State:</string>
    <string name="torrent_details_progress">Progress:</string>
    <string name="torrent_details_torrent_hash">Torrent Hash:</string>
    <string name="torrent_details_torrent_sequential">Download in sequential order </string>
    <string name="torrent_details_torrent_first_last_piece_first">Download first and last piece first</string>
    <string name="torrent_details_created_date">Created On:</string>
    <string name="torrent_details_comment">Comment:</string>
    <string name="torrent_details_first_last">First and last pieces</string>
    <string name="torrent_priority_menu">Priority…</string>
    <string name="torrent_details_seq_download">Sequential download</string>
    <string name="settings_qbittorrent_advanced">Advanced…</string>
    <string name="settings_qbittorrent_account_category">Accounts</string>
    <string name="settings_qbittorrent_currentServer_title">Choose a qBittorrent server</string>
    <string name="settings_qbittorrent_currentServer_summary">qBittorrent Server</string>
    <string name="settings_qbittorrent_hostname_title">Connection Host</string>
    <string name="settings_qbittorrent_hostname_summary">Hostname or IP</string>
    <string name="settings_qbittorrent_hostname_dialog_title">Hostname or IP?</string>
    <string name="settings_qbittorrent_hostname_hint">Example: 192.168.1.1</string>
    <string name="settings_qbittorrent_subfolder_title">Subfolder</string>
    <string name="settings_qbittorrent_subfolder_dialog_title">Subfolder? If in doubt, leave it blank!</string>
    <string name="settings_qbittorrent_https_title">Enable https</string>
    <string name="settings_qbittorrent_https_summary">Connect using https</string>
    <string name="settings_qbittorrent_port_title">Connection Port</string>
    <string name="settings_qbittorrent_port_summary">Port (80, 8080, etc)</string>
    <string name="settings_qbittorrent_port_dialog_title">Connection Port?</string>
    <string name="settings_qbittorrent_username_title">Username</string>
    <string name="settings_qbittorrent_username_dialog_title">Username?</string>
    <string name="settings_qbittorrent_password_title">Password</string>
    <string name="settings_qbittorrent_password_summary">Provide password</string>
    <string name="settings_qbittorrent_password_dialog_title">Password?</string>
    <string name="settings_qbittorrent_autorefresh_category">Auto Refresh</string>
    <string name="settings_qbittorrent_autorefresh_title">Refresh automatically?</string>
    <string name="settings_qbittorrent_autorefresh_summary">Update torrent list</string>
    <string name="settings_qbittorrent_refresh_period_title">Refresh every…</string>
    <string name="settings_qbittorrent_notifications_category">Notifications</string>
    <string name="settings_qbittorrent_notifications_summary">Background checking</string>
    <string name="settings_qbittorrent_notifications_period_title">Check torrents every…</string>
    <string name="settings_qbittorrent_notifications_period_summary">Check every…</string>
    <string name="settings_qbittorrent_timeouts_category">Timeouts</string>
    <string name="settings_qbittorrent_connection_timeout_title">Connection timeout</string>
    <string name="settings_qbittorrent_connection_timeout_summary">Timeout in seconds until a connection is established</string>
    <string name="settings_qbittorrent_data_timeout_title">Data timeout</string>
    <string name="settings_qbittorrent_data_timeout_summary">Timeout in seconds to wait for data</string>
    <string name="settings_qbittorrent_sortby_summary">Sort by…</string>
    <string name="settings_qbittorrent_reverse_order_summary">Reverse order</string>
    <string name="settings_qbittorrent_appearance_category">Appearance</string>
    <string name="settings_qbittorrent_darkui_dialog_title">Use dark theme</string>
    <string name="settings_qbittorrent_header_dialog_title">Show speeds and totals</string>
    <string name="settings_qbittorrent_header_dialog_sumary">Upload/download speeds and totals</string>
    <string name="settings_qbittorrent_pathAndLabelDialog_dialog_title">Save path and category dialog</string>
    <string name="search_title">Search</string>
    <string name="settings_qbittorrent_darkui_summary">Restart the app to apply the theme</string>
    <string name="sortby_menu_name">Name</string>
    <string name="sortby_menu_size">Size</string>
    <string name="sortby_menu_eta">ETA</string>
    <string name="sortby_menu_priority">Priority</string>
    <string name="sortby_menu_progress">Progress</string>
    <string name="sortby_menu_ratio">Ratio</string>
    <string name="sortby_menu_speed">Speed…</string>
    <string name="sortby_menu_download_speed">Download speed</string>
    <string name="sortby_menu_upload_speed">Upload speed</string>
    <string name="sortby_menu_date">Date…</string>
    <string name="sortby_menu_added_on">Added on</string>
    <string name="sortby_menu_completed_on">Completed on</string>
    <string name="settings_qbittorrent_notifications_title">Enable notifications</string>
    <string name="action_rss">RSS</string>
    <string name="action_toggle_alternative_rates">Alternative speeds</string>
    <string name="settings_qbittorrent_SSID_category">Local network</string>
    <string name="settings_qbittorrent_ssid_dialog_title">Network SSID</string>
    <string name="settings_qbittorrent_localhostname_dialog_title">Local Hostname or IP</string>
    <string name="settings_qbittorrent_localport_dialog_title">Local Port</string>
    <string name="settings_qbittorrent_https_self_signed_bks_file_title">Self-signed certificate keystore</string>
    <string name="settings_qbittorrent_https_category">HTTPS</string>
    <string name="settings_qbittorrent_https_self_signed_keystore_password_title">Keystore password</string>
    <string name="action_set_category">Set category</string>
    <string name="action_delete_category">Delete category</string>
    <string name="torrent_category_menu">Category…</string>
    <string name="action_add_tracker">Add tracker</string>
    <string name="action_add_file">Add torrent file</string>
    <string name="action_add_url">Add torrent link</string>
    <string name="settings_qbittorrent_pathAndLabelDialog_dialog_summary">Enable save path and category dialog</string>
</resources>