<!--
  ~ Copyright (C) 2023 FFDA
  ~ This file is part of qBittorrent Controller+.
  ~
  ~ qBittorrent Controller+ is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ qBittorrent Controller+ is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with qBittorrent Controller+. If not, see <https://www.gnu.org/licenses/>.
  ~
  ~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Original License
  ~ MIT License
  ~ Copyright (c) 2020 Luis M. Gallardo D.
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_sort_menu"
        android:icon="@drawable/ic_action_sort"
        android:title="@string/settings_qbittorrent_sortby_summary"
        app:showAsAction="collapseActionView|ifRoom">

        <menu>

            <item
                android:id="@+id/action_sortby_name"
                android:title="@string/sortby_menu_name" />
            <item
                android:id="@+id/action_sortby_size"
                android:title="@string/sortby_menu_size" />
            <item
                android:id="@+id/action_sortby_eta"
                android:title="@string/sortby_menu_eta" />
            <item
                android:id="@+id/action_sortby_priority"
                android:title="@string/sortby_menu_priority" />
            <item
                android:id="@+id/action_sortby_progress"
                android:title="@string/sortby_menu_progress" />
            <item
                android:id="@+id/action_sortby_ratio"
                android:title="@string/sortby_menu_ratio" />

            <item
                android:id="@+id/action_sortby_speed"
                android:title="@string/sortby_menu_speed">

                <menu>
                    <item
                        android:id="@+id/action_sortby_downloadSpeed"
                        android:title="@string/sortby_menu_download_speed" />
                    <item
                        android:id="@+id/action_sortby_uploadSpeed"
                        android:title="@string/sortby_menu_upload_speed" />
                </menu>

            </item>
            <item
                android:id="@+id/action_sortby_date"
                android:title="@string/sortby_menu_date">

                <menu>
                    <item
                        android:id="@+id/action_sortby_added_on"
                        android:title="@string/sortby_menu_added_on" />
                    <item
                        android:id="@+id/action_sortby_completed_on"
                        android:title="@string/sortby_menu_completed_on" />

                </menu>
            </item>
            <item
                android:id="@+id/action_sortby_reverse_order"
                android:title="@string/settings_qbittorrent_reverse_order_summary" />


        </menu>

    </item>
    <item
        android:id="@+id/action_resume_all"
        android:icon="@drawable/ic_action_resume"
        android:title="@string/action_resume_all"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_pause_all"
        android:icon="@drawable/ic_action_pause"
        android:title="@string/action_pause_all"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_add"
        android:title="@string/action_add"
        app:showAsAction="collapseActionView|ifRoom">
        <menu>
            <item
                android:id="@+id/action_add_file"
                android:title="@string/action_add_file" />
            <item
                android:id="@+id/action_add_url"
                android:title="@string/action_add_url" />
        </menu>
    </item>

    <item
        android:id="@+id/action_resume"
        android:icon="@drawable/ic_action_resume"
        android:title="@string/action_resume"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_pause"
        android:icon="@drawable/ic_action_pause"
        android:title="@string/action_pause"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/action_delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete_drive"
        android:icon="@drawable/ic_action_delete_drive"
        android:title="@string/action_delete_drive"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_force_start"
        android:icon="@drawable/ic_action_force_start"
        android:title="@string/action_force_start"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_priority_menu"
        android:icon="@drawable/ic_action_increase_prio"
        android:title="@string/torrent_priority_menu">

        <menu>
            <item
                android:id="@+id/action_increase_prio"
                android:icon="@drawable/ic_action_increase_prio"
                android:title="@string/action_increase_priority"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_decrease_prio"
                android:icon="@drawable/ic_action_decrease_prio"
                android:title="@string/action_decrease_priority"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_max_prio"
                android:icon="@drawable/ic_action_max_prio"
                android:title="@string/action_maximum_priority"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_min_prio"
                android:icon="@drawable/ic_action_min_prio"
                android:title="@string/action_minimum_priority"
                app:showAsAction="ifRoom" />
        </menu>
    </item>

    <item
        android:id="@+id/action_download_rate_limit"
        android:title="@string/action_download_rate_limit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_upload_rate_limit"
        android:title="@string/action_upload_rate_limit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_recheck"
        android:title="@string/action_force_recheck"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sequential_download"
        android:title="@string/torrent_details_seq_download"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_first_last_piece_prio"
        android:title="@string/torrent_details_first_last"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_tracker"
        android:title="@string/action_add_tracker"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_label_menu"
        android:icon="@drawable/ic_action_increase_prio"
        android:title="@string/torrent_category_menu">

        <menu>

            <item
                android:id="@+id/action_set_category"
                android:icon="@drawable/ic_drawer_categories"
                android:title="@string/action_set_category"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_delete_category"
                android:icon="@drawable/ic_action_delete_drive"
                android:title="@string/action_delete_category"
                app:showAsAction="ifRoom" />
        </menu>

    </item>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/abc_ic_search_api_material"
        android:title="@string/search_title"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_rss"
        android:icon="@drawable/ic_action_add_rss"
        android:title="@string/action_rss"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/action_toggle_alternative_rate"
        android:checkable="true"
        android:enabled="false"
        android:title="@string/action_toggle_alternative_rates"
        app:showAsAction="ifRoom" />


</menu>