<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2023 FFDA
  ~ This file is part of qBittorrent Controller+.
  ~
  ~ qBittorrent Controller+ is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ qBittorrent Controller+ is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with qBittorrent Controller+. If not, see <https://www.gnu.org/licenses/>.
  ~
  ~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Original License
  ~ MIT License
  ~ Copyright (c) 2020 Luis M. Gallardo D.
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
        android:key="advanced"
        android:persistent="false"
        android:title="@string/settings_qbittorrent_advanced">

        <PreferenceCategory
            android:key="Account2"
            android:title="@string/settings_qbittorrent_account_category">

            <EditTextPreference
                android:defaultValue="8080"
                android:dialogTitle="@string/settings_qbittorrent_port_dialog_title"
                android:inputType="number"
                android:key="port"
                android:summary="@string/settings_qbittorrent_port_summary"
                android:title="@string/settings_qbittorrent_port_title" />

            <EditTextPreference
                android:defaultValue=""
                android:dialogTitle="@string/settings_qbittorrent_subfolder_dialog_title"
                android:key="subfolder"
                android:title="@string/settings_qbittorrent_subfolder_title" />
        </PreferenceCategory>

        <PreferenceCategory
            android:key="https_category"
            android:title="@string/settings_qbittorrent_https_category">
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="https"
                android:summary="@string/settings_qbittorrent_https_summary"
                android:title="@string/settings_qbittorrent_https_title" />

            <Preference
                android:dependency="https"
                android:key="keystore_path"
                android:title="@string/settings_qbittorrent_https_self_signed_bks_file_title" />

            <EditTextPreference
                android:defaultValue=""
                android:dependency="https"
                android:dialogTitle="@string/settings_qbittorrent_https_self_signed_keystore_password_title"
                android:inputType="textPassword"
                android:key="keystore_password"
                android:summary="@string/settings_qbittorrent_password_summary"
                android:title="@string/settings_qbittorrent_https_self_signed_keystore_password_title" />
        </PreferenceCategory>


        <PreferenceCategory
            android:key="LocalNetwork"
            android:title="@string/settings_qbittorrent_SSID_category">

            <EditTextPreference
                android:defaultValue=""
                android:dialogTitle="@string/settings_qbittorrent_ssid_dialog_title"
                android:key="ssid"
                android:summary="@string/settings_qbittorrent_ssid_dialog_title"
                android:title="@string/settings_qbittorrent_ssid_dialog_title" />

            <EditTextPreference
                android:defaultValue=""
                android:dialogTitle="@string/settings_qbittorrent_localhostname_dialog_title"
                android:key="local_hostname"
                android:summary="@string/settings_qbittorrent_ssid_dialog_title"
                android:title="@string/settings_qbittorrent_localhostname_dialog_title" />

            <EditTextPreference
                android:defaultValue=""
                android:dialogTitle="@string/settings_qbittorrent_localport_dialog_title"
                android:inputType="number"
                android:key="local_port"
                android:summary="@string/settings_qbittorrent_ssid_dialog_title"
                android:title="@string/settings_qbittorrent_localport_dialog_title" />
        </PreferenceCategory>

        <PreferenceCategory
            android:key="timeouts"
            android:title="@string/settings_qbittorrent_timeouts_category">
            <EditTextPreference
                android:defaultValue="10"
                android:dialogTitle="@string/settings_qbittorrent_connection_timeout_summary"
                android:inputType="number"
                android:key="connection_timeout"
                android:summary="@string/settings_qbittorrent_connection_timeout_summary"
                android:title="@string/settings_qbittorrent_connection_timeout_title" />
            <EditTextPreference
                android:defaultValue="20"
                android:dialogTitle="@string/settings_qbittorrent_data_timeout_summary"
                android:inputType="number"
                android:key="data_timeout"
                android:summary="@string/settings_qbittorrent_data_timeout_summary"
                android:title="@string/settings_qbittorrent_data_timeout_title" />
        </PreferenceCategory>
</PreferenceScreen>